--- a/nginx.conf
+++ b/nginx.conf
@@ -1,214 +1,293 @@
+# Enhanced Nginx configuration for CCany with Claude Code optimization
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
 events {
     worker_connections 1024;
+    use epoll;
+    multi_accept on;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    # 日志格式
+    # Logging format optimized for Claude Code requests
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+                    '"$http_user_agent" "$http_x_forwarded_for" '
+                    'rt=$request_time uct="$upstream_connect_time" '
+                    'uht="$upstream_header_time" urt="$upstream_response_time" '
+                    'thinking="$http_thinking" model="$http_model"';
 
     access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log;
 
-    # 基础配置
+    # Performance optimizations
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
+    client_max_body_size 100M;
+    client_body_timeout 60s;
+    client_header_timeout 60s;
+    send_timeout 60s;
 
-    # Gzip 压缩
+    # Gzip compression
     gzip on;
     gzip_vary on;
-    gzip_min_length 1024;
+    gzip_min_length 1000;
     gzip_proxied any;
     gzip_comp_level 6;
     gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
         application/json
         application/javascript
         application/xml+rss
         application/atom+xml
-        image/svg+xml;
+        image/svg+xml
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/x-javascript
+        application/xml;
 
-    # 上游服务器定义
-    upstream claude_proxy_go {
-        server claude-proxy-go:8082;
+    # Rate limiting for API endpoints
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=streaming:10m rate=5r/s;
+
+    # Upstream for CCany application
+    upstream ccany_backend {
+        server ccany:8082;
+        keepalive 32;
     }
 
-
-    upstream adminer {
-        server adminer:8080;
-    }
-
-    upstream grafana {
-        server grafana:3000;
-    }
-
-    # 主服务器配置
+    # HTTP server block
     server {
         listen 80;
         server_name localhost;
-
-        # 安全头
+        
+        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
-        # 默认路由到 Go 版本
-        location / {
-            proxy_pass http://claude_proxy_go;
+        # Health check endpoint (no rate limiting)
+        location /health {
+            proxy_pass http://ccany_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
-            # WebSocket 支持
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            # Quick health check timeouts
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
+        }
+
+        # API endpoints with rate limiting
+        location /v1/ {
+            limit_req zone=api burst=20 nodelay;
             
-            # 超时设置
-            proxy_connect_timeout 60s;
+            proxy_pass http://ccany_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Enhanced timeouts for API requests
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 120s;
+            proxy_read_timeout 120s;
+            
+            # Buffer settings for large requests
+            proxy_buffering on;
+            proxy_buffer_size 4k;
+            proxy_buffers 8 4k;
+            proxy_busy_buffers_size 8k;
+            
+            # Claude Code specific headers
+            proxy_set_header X-Claude-Code-Compatible "true";
+            proxy_set_header X-Request-ID $request_id;
+        }
+
+        # Streaming endpoints with special handling
+        location ~ ^/v1/(messages|chat/completions) {
+            limit_req zone=streaming burst=10 nodelay;
+            
+            proxy_pass http://ccany_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Streaming optimizations
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+            
+            # SSE specific headers
+            proxy_set_header Connection '';
+            proxy_http_version 1.1;
+            
+            # Claude Code streaming headers
+            proxy_set_header X-Claude-Code-Stream "true";
+            proxy_set_header X-Request-ID $request_id;
+            
+            # Chunked transfer encoding for streaming
+            chunked_transfer_encoding on;
+        }
+
+        # Static files
+        location /static/ {
+            proxy_pass http://ccany_backend;
+            proxy_set_header Host $host;
+            
+            # Cache static files
+            expires 1d;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # Admin endpoints (additional security)
+        location /admin/ {
+            limit_req zone=api burst=5 nodelay;
+            
+            proxy_pass http://ccany_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Strict timeouts for admin
+            proxy_connect_timeout 30s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
         }
 
-
-        # 数据库管理界面
-        location /adminer/ {
-            proxy_pass http://adminer/;
+        # Default location
+        location / {
+            proxy_pass http://ccany_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Default timeouts
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
         }
 
-        # 监控界面
-        location /grafana/ {
-            proxy_pass http://grafana/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # 健康检查
-        location /nginx-health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-
-        # 静态文件缓存
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            proxy_pass http://claude_proxy_go;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # 错误页面
+        # Error pages
+        error_page 404 /404.html;
         error_page 500 502 503 504 /50x.html;
+        
         location = /50x.html {
             root /usr/share/nginx/html;
         }
     }
 
-    # HTTPS 配置（可选）
+    # HTTPS server block (if SSL is configured)
     server {
         listen 443 ssl http2;
         server_name localhost;
-
-        # SSL 证书配置（需要提供证书文件）
+        
+        # SSL configuration
         ssl_certificate /etc/nginx/ssl/cert.pem;
         ssl_certificate_key /etc/nginx/ssl/key.pem;
-
-        # SSL 配置
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
         ssl_prefer_server_ciphers off;
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
-
-        # 安全头
+        
+        # HSTS header
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        
+        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
-        # 与 HTTP 配置相同的位置块
-        location / {
-            proxy_pass http://claude_proxy_go;
+        # Include all location blocks from HTTP server
+        # (Copy all location blocks from the HTTP server here)
+        location /health {
+            proxy_pass http://ccany_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
-            # WebSocket 支持
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
+        }
+
+        location /v1/ {
+            limit_req zone=api burst=20 nodelay;
             
-            # 超时设置
-            proxy_connect_timeout 60s;
+            proxy_pass http://ccany_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 120s;
+            proxy_read_timeout 120s;
+            
+            proxy_buffering on;
+            proxy_buffer_size 4k;
+            proxy_buffers 8 4k;
+            proxy_busy_buffers_size 8k;
+            
+            proxy_set_header X-Claude-Code-Compatible "true";
+            proxy_set_header X-Request-ID $request_id;
+        }
+
+        location ~ ^/v1/(messages|chat/completions) {
+            limit_req zone=streaming burst=10 nodelay;
+            
+            proxy_pass http://ccany_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+            
+            proxy_set_header Connection '';
+            proxy_http_version 1.1;
+            
+            proxy_set_header X-Claude-Code-Stream "true";
+            proxy_set_header X-Request-ID $request_id;
+            
+            chunked_transfer_encoding on;
+        }
+
+        location / {
+            proxy_pass http://ccany_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            proxy_connect_timeout 30s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
-        }
-
-
-        # 数据库管理界面
-        location /adminer/ {
-            proxy_pass http://adminer/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # 监控界面
-        location /grafana/ {
-            proxy_pass http://grafana/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # 健康检查
-        location /nginx-health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-
-        # 静态文件缓存
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            proxy_pass http://claude_proxy_go;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # 错误页面
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
         }
     }
 }
