Update .gitignore to exclude IDE, data, and reference directories
- Add .idea/ and .vscode/ to prevent IDE files from being committed
- Add data/ directory and database files (*.db, *.db-shm, *.db-wal)
- Add ref/ directory to exclude reference repositories
- Prevent accidental commits of development and runtime files

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,16 @@ go.work.sum
 .env
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
 /cmd/server/server
 /cmd/server/data/
+
+# Data directory and database files
+data/
+*.db
+*.db-shm
+*.db-wal
+
+# Reference directories
+ref/
