Fix Docker build context issues
- Add extra_files configuration in GoReleaser for go.mod and go.sum
- Ensure go module files are properly included in Docker build context
- Run go mod tidy to ensure go.sum is complete and up-to-date

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -46,6 +46,9 @@ dockers:
       - "{{ .Env.DOCKERHUB_USERNAME }}/ccany:latest-amd64"
     dockerfile: Dockerfile
     use: buildx
+    extra_files:
+      - go.mod
+      - go.sum
     build_flag_templates:
       - "--pull"
       - "--platform=linux/amd64"
@@ -67,6 +70,9 @@ dockers:
       - "{{ .Env.DOCKERHUB_USERNAME }}/ccany:latest-arm64"
     dockerfile: Dockerfile
     use: buildx
+    extra_files:
+      - go.mod
+      - go.sum
     build_flag_templates:
       - "--pull"
       - "--platform=linux/arm64"
