--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,7 @@ STREAM_ENABLED=true
 # Database Settings
 DATABASE_URL=sqlite3:///app/data/ccany.db
 DATABASE_ENCRYPTION_KEY=your_encryption_key_here
+CLAUDE_PROXY_DATA_PATH=./data
 
 # ==============================================
 # Security Configuration
